# NeuralC

./: CMakeLists.txt  Makefile  README.md  network_config_checker.c  network_config_helper.c  network_config_helper.h  neuron.c  neuron.h
examples/: example.network  xor.tdata
helpers/: math_funcs.c  math_funcs.h  network_config_helper.c  network_config_helper.h  network_loader.c  network_loader.h
